[project]
name = "mirlo_utils"
version = "0.0.1"
authors = [
  { name="Cristian Banuelos", email="holomorfo.mx@gmail.com" },
]
description = "Music information retrieval utilities"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/holomorfo/mirlo-utils"
Issues = "https://github.com/holomorfo/mirlo-utils/issues"